--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,8 @@
   <meta property="og:url" content="{{ site.url }}"/>
   <meta property="og:description" content="{{ site.description }}"/>
 
+  <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon"/>
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
