--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -371,7 +371,7 @@ footer{
     color: #fff;
     padding: 64px 0;
 }
-#partners, #bronze, #friend, #gold, #silver, #platnium, #presenting{
+#partner, #bronze, #friend, #gold, #silver, #platnium, #presenting{
     text-align: center;
     padding: 0 15px;
     position: relative;
@@ -420,7 +420,7 @@ footer{
     max-width: 95px;
     margin-right: 30px;
 }
-#partners .sponsor {
+#partner .sponsor {
     height: 75px;
     max-width: 75px;
     margin-right: 30px;
@@ -448,7 +448,7 @@ footer{
         height: 125px;
         max-width: 125px;
     }
-    #partners .sponsor {
+    #partner .sponsor {
         height: 100px;
         max-width: 100px;
     }
