--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -432,7 +432,7 @@ footer {
   padding: 64px 0;
 }
 
-#partner, #bronze, #friend, #gold, #silver, #platnium, #presenting {
+#partners, #bronze, #friend, #gold, #silver, #platnium, #presenting {
   text-align: center;
   padding: 0 15px;
   position: relative;
@@ -489,7 +489,7 @@ footer {
   margin-right: 30px;
 }
 
-#partner .sponsor  {
+#partners .sponsor  {
   height: 75px;
   max-width: 75px;
   margin-right: 30px;
@@ -524,7 +524,7 @@ footer {
     max-width: 125px;
   }
 
-  #partner .sponsor  {
+  #partners .sponsor  {
     height: 100px;
     max-width: 100px;
   }
