--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
           {% for sponsor in site.data.sponsors.items %}
             {% if sponsor.group_ids contains group.id %}
               <div class="sponsor">
-                <a href="#" rel="external"><img src="https://s3.amazonaws.com/eventmobi-assets/eventsbyids/9565/exhibitors/{{ sponsor.logo_large_wide }}"></a>
+                <a href="{{ sponsor.website }}" rel="external"><img src="https://s3.amazonaws.com/eventmobi-assets/eventsbyids/9565/exhibitors/{{ sponsor.logo_large_wide }}"></a>
               </div>
             {% endif %}
           {% endfor %}
