Removing speak link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,7 +80,7 @@
 <footer>
   <div class="container">
     <div class="row col-md-12">
-      &copy; 2015 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/speak">Submit a Talk</a> | <a href="/code-of-conduct">Code of Conduct</a>
+      &copy; 2015 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/code-of-conduct">Code of Conduct</a>
     </div>
   </div>
 </footer>
