Updating sponsors and adding food partners

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,61 +16,96 @@
     <div class="row col-md-12">
         <div id="presenting">
           <h2>Presenting Sponsor</h2>
-          <div class="sponsor">
-            <a href="//telus.com"><img src="/static/images/sponsors/telus.png" alt="TELUS" /></a>
-          </div>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="//telus.com"><img src="/static/images/sponsors/telus.png" alt="TELUS" /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="clearfix"></div>
+        <div id="platnium">
+          <h2>Platnium Sponsors</h2>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="https://www.microsoft.com/en-ca/windows/microsoft-edge"><img src="/static/images/sponsors/edge.png" alt="Microsoft Edge" /></a>
+            </li>
+          </ul>
         </div>
         <div class="clearfix"></div>
         <div id="gold">
           <h2>Gold Sponsors</h2>
-          <div class="sponsor">
-            <a href="//mandrill.com"><img src="/static/images/sponsors/mandrill.png" alt="Mandrill" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="//syncano.com"><img src="/static/images/sponsors/SYNCANO.png" alt="SYNCANO" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="//twilio.com"><img src="/static/images/sponsors/twilio.png" alt="Twilio" /></a>
-          </div>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="//syncano.com"><img src="/static/images/sponsors/SYNCANO.png" alt="SYNCANO" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="//mandrill.com"><img src="/static/images/sponsors/mandrill.png" alt="Mandrill" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="//twilio.com"><img src="/static/images/sponsors/twilio.png" alt="Twilio" /></a>
+            </li>
+          </ul>
         </div>
         <div class="clearfix"></div>
         <div id="silver">
           <h2>Silver Sponsors</h2>
-          <div class="sponsor">
-            <a href="//rangle.io"><img src="/static/images/sponsors/rangleio.png" alt="Rangle IO" /></a>
-          </div>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="//rangle.io"><img src="/static/images/sponsors/rangleio.png" alt="Rangle IO" /></a>
+            </li>
+          </ul>
         </div>
         <div class="clearfix"></div>
         <div id="bronze">
           <h2>Bronze Sponsors</h2>
-          <div class="sponsor">
-            <a href="//heroku.com"><img src="/static/images/sponsors/heroku.png" alt="heroku" /></a>
-          </div>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="//heroku.com"><img src="/static/images/sponsors/heroku.png" alt="heroku" /></a>
+            </li>
+          </ul>
         </div>
         <div class="clearfix"></div>
         <div id="partner">
           <h2>Partners</h2>
-          <div class="sponsor">
-            <a href="http://velocityconf.com/devops-web-performance-ny-2015"><img src="/static/images/sponsors/velocity.png" alt="Velocity Conf" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="http://www.oreilly.com/"><img src="/static/images/sponsors/oreilly.png" alt="O'Reilly Media" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="http://www.mindfulsnacks.com/"><img src="/static/images/sponsors/mindfulsnacks.png" alt="Mindful Snacks" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="http://ionicframework.com/"><img src="/static/images/sponsors/ionic.png" alt="ionic" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="http://www.meetup.com/devtoevents/"><img src="/static/images/sponsors/devto.png" alt="#devto" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="https://www.kindnessconnect.com/fstoco/"><img src="/static/images/sponsors/kindnessconnect.png" alt="Kindness Connect" /></a>
-          </div>
-          <div class="sponsor">
-            <a href="http://eventmobi.com/fstoconf15"><img src="/static/images/sponsors/eventmobi.png" alt="Event Mobi" /></a>
-          </div>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="http://velocityconf.com/devops-web-performance-ny-2015"><img src="/static/images/sponsors/velocity.png" alt="Velocity Conf" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://www.oreilly.com/"><img src="/static/images/sponsors/oreilly.png" alt="O'Reilly Media" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://www.mindfulsnacks.com/"><img src="/static/images/sponsors/mindfulsnacks.png" alt="Mindful Snacks" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://ionicframework.com/"><img src="/static/images/sponsors/ionic.png" alt="ionic" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://www.meetup.com/devtoevents/"><img src="/static/images/sponsors/devto.png" alt="#devto" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="https://www.kindnessconnect.com/fstoco/"><img src="/static/images/sponsors/kindnessconnect.png" alt="Kindness Connect" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://eventmobi.com/fstoconf15"><img src="/static/images/sponsors/eventmobi.png" alt="Event Mobi" /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="clearfix"></div>
+        <div id="partner">
+          <h2>Food Partners</h2>
+          <p>Show Your Badge &amp; Save! Present your badge to your server before ordering and receive 15% off food only at participating locations! Valid November 14th &amp; 15th, 2015 at Hard Rock Cafe Toronto / 279 Yonge Street, Reds MIDTOWN Tavern / 382 Yonge Street, The FIRKIN on YONGE / 207 Yonge Street</p>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="http://www.hardrock.com/cafes/toronto/"><img src="/static/images/sponsors/hardrock.png" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://redsmidtowntavern.com/"><img src="/static/images/sponsors/reds.png" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://firkinpubs.com/firkinonyonge/"><img src="/static/images/sponsors/firkin.png" alt="" /></a>
+            </li>
+          </ul>
         </div>
         <div class="clearfix"></div>
     </div>
