--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -434,12 +434,17 @@ footer {
   padding: 0 15px;
   position: relative;
   h2 {
-    margin: 0 0 30px 0;
+    margin: 30px 0 30px 0;
   }
-
+  .sponsorList {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
   .sponsor  {
-    float: left;
-    position: relative;
+    vertical-align: middle;
+    list-style: none;
+    display: inline-block;
     margin-bottom: 15px;
     img  {
       max-width: 100%;
@@ -452,39 +457,33 @@ footer {
 #presenting .sponsor  {
   width: 100%;
   text-align: center;
-  height: 150px;
 }
 
-#presenting .sponsor img {
+#presenting .sponsor {
   max-width: 290px;
 }
 
 #platnium .sponsor  {
-  height: 240px;
-  max-width: 240px;
+  max-width: 190px;
   margin-right: 30px;
 }
 
 #gold .sponsor  {
-  height: 180px;
-  max-width: 180px;
+  max-width: 150px;
   margin-right: 30px;
 }
 
 #silver .sponsor {
-  height: 135px;
   max-width: 135px;
   margin-right: 30px;
 }
 
 #bronze .sponsor  {
-  height: 95px;
   max-width: 95px;
   margin-right: 30px;
 }
 
 #partner .sponsor  {
-  height: 75px;
   max-width: 75px;
   margin-right: 30px;
 }
@@ -494,32 +493,27 @@ footer {
     margin-bottom: 0px;
   }
 
-  #presenting .sponsor img {
-    max-width: 400px;
+  #presenting .sponsor {
+    max-width: 450px;
   }
 
   #platnium .sponsor  {
-    height: 300px;
-    max-width: 300px;
+    max-width: 275px;
   }
 
   #gold .sponsor  {
-    height: 225px;
     max-width: 225px;
   }
 
   #silver .sponsor {
-    height: 170px;
     max-width: 170px;
   }
 
   #bronze .sponsor  {
-    height: 125px;
     max-width: 125px;
   }
 
   #partner .sponsor  {
-    height: 100px;
     max-width: 100px;
   }
 }
