--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
         </div>
         <div class="clearfix"></div>
         <div id="platnium">
-          <h2>Platnium Sponsors</h2>
+          <h2>Platinum Sponsors</h2>
           <ul class="sponsorList">
             <li class="sponsor">
               <a href="https://www.microsoft.com/en-ca/windows/microsoft-edge"><img src="/static/images/sponsors/edge.png" alt="Microsoft Edge" /></a>
