Flights and hotels

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -108,6 +108,25 @@
           </ul>
         </div>
         <div class="clearfix"></div>
+        <div id="partner">
+          <h2>Flight &amp; Hotel Partners</h2>
+          <p>Registrants of #fstoconf15 presented by TELUS enjoy discounts at the following flight and hotel providers. Details will be sent in your order confimration.</p>
+          <ul class="sponsorList">
+            <li class="sponsor">
+              <a href="https://www.flyporter.com/Flight?culture=en-US"><img src="/static/images/sponsors/porter.jpg" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="https://www.united.com/web/en-US/default.aspx?root=1"><img src="/static/images/sponsors/united.png" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://www.ihg.com/holidayinn/hotels/us/en/reservation"><img src="/static/images/sponsors/holidayinn.jpg" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://www.marriott.com/courtyard/travel.mi"><img src="/static/images/sponsors/courtyard.png" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="clearfix"></div>
     </div>
   </div>
 </section>
