--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
               <a href="//twilio.com"><img src="/static/images/sponsors/twilio.png" alt="Twilio" /></a>
             </li>
              <li class="sponsor">
-              <a href="http://www.infotech.com/"><img src="/static/images/sponsors/infotech.png" alt="Info-Tech Research Group" /></a>
+              <a href="http://www.infotech.com/"><img src="/static/images/sponsors/infotech.jpg" alt="Info-Tech Research Group" /></a>
             </li>
           </ul>
         </div>
