changes microsoft logo link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
           <h2>Platinum Sponsors</h2>
           <ul class="sponsorList">
             <li class="sponsor">
-              <a href="https://www.microsoft.com/en-ca/windows/microsoft-edge"><img src="/static/images/sponsors/edge.png" alt="Microsoft Edge" /></a>
+              <a href="https://dev.modern.ie/"><img src="/static/images/sponsors/edge.png" alt="Microsoft Edge" /></a>
             </li>
           </ul>
         </div>
