adding hired and viarail

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,13 +39,16 @@
               <a href="//syncano.com"><img src="/static/images/sponsors/SYNCANO.png" alt="SYNCANO" /></a>
             </li>
             <li class="sponsor">
-              <a href="//mandrill.com"><img src="/static/images/sponsors/mandrill.png" alt="Mandrill" /></a>
-            </li>
-            <li class="sponsor">
               <a href="//twilio.com"><img src="/static/images/sponsors/twilio.png" alt="Twilio" /></a>
             </li>
              <li class="sponsor">
               <a href="http://www.infotech.com/"><img src="/static/images/sponsors/infotech.jpg" alt="Info-Tech Research Group" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="https://hired.com/"><img src="/static/images/sponsors/hired.png" alt="HIRED" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="//mandrill.com"><img src="/static/images/sponsors/mandrill.png" alt="Mandrill" /></a>
             </li>
           </ul>
         </div>
@@ -120,6 +123,9 @@
             </li>
             <li class="sponsor">
               <a href="https://www.united.com/web/en-US/default.aspx?root=1"><img src="/static/images/sponsors/united.png" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="http://www.viarail.ca/en"><img src="/static/images/sponsors/viarail.svg" alt="" /></a>
             </li>
             <li class="sponsor">
               <a href="http://www.ihg.com/holidayinn/hotels/us/en/reservation"><img src="/static/images/sponsors/holidayinn.jpg" alt="" /></a>
