adding privacy policy adding loblaw shrinking images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,6 +50,9 @@
             <li class="sponsor">
               <a href="//mandrill.com"><img src="/static/images/sponsors/mandrill.png" alt="Mandrill" /></a>
             </li>
+            <li class="sponsor">
+              <a href="https://www.linkedin.com/company/loblaw-digital/careers"><img src="/static/images/sponsors/loblaw-digital.svg" alt="Loblaw Digital" /></a>
+            </li>
           </ul>
         </div>
         <div class="clearfix"></div>
@@ -143,7 +146,7 @@
 <footer>
   <div class="container">
     <div class="row col-md-12">
-      &copy; 2015 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/code-of-conduct">Code of Conduct</a>
+      &copy; 2015 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/code-of-conduct">Code of Conduct</a> <a href="//www.iubenda.com/privacy-policy/759651" class="iubenda-black iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
     </div>
   </div>
 </footer>
