--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -123,7 +123,7 @@ h3, h4, h5 {
 }
 
 .red-poly {
-  background: url(/static/images/red-bg.png);
+  background: url(/static/images/red-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   text-shadow: 1px 1px 3px #565656;
@@ -131,7 +131,7 @@ h3, h4, h5 {
 }
 
 .green-poly {
-  background: url(/static/images/green-bg.png);
+  background: url(/static/images/green-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   text-shadow: 1px 1px 3px #565656;
@@ -139,7 +139,7 @@ h3, h4, h5 {
 }
 
 .blue-poly {
-  background: url(/static/images/blue-bg.png);
+  background: url(/static/images/blue-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   text-shadow: 1px 1px 3px #565656;
@@ -147,7 +147,7 @@ h3, h4, h5 {
 }
 
 .purple-poly {
-  background: url(/static/images/purple-bg.png);
+  background: url(/static/images/purple-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   text-shadow: 1px 1px 3px #565656;
