--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,6 +62,9 @@
             <li class="sponsor">
               <a href="//rangle.io"><img src="/static/images/sponsors/rangleio.png" alt="Rangle IO" /></a>
             </li>
+            <li class="sponsor">
+              <a href="http://www.rlsolutions.com/home"><img src="/static/images/sponsors/rlsolutions.png" alt="RL Solutions" /></a>
+            </li>
           </ul>
         </div>
         <div class="clearfix"></div>
