--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,33 @@
 {% assign current = page.url | remove: "index.html" %}
 <!DOCTYPE html>
-<html>
+<html itemscope itemtype="http://schema.org/Article">
   {% include head.html %}
+  <head>
+    <title>{{ page.title }} | Full Stack Toronto</title>
+    <meta name="description" content="Full Stack Toronto is a non-profit that hosts seminars and conferences that focus on all layers of web development. #fstoconf15 is coming up Nov. 14-15, 2015 in Toronto, Canada" />
 
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="Full Stack Toronto">
+    <meta itemprop="description" content="Full Stack Toronto is a non-profit that hosts seminars and conferences that focus on all layers of web development. #fstoconf15 is coming up Nov. 14-15, 2015 in Toronto, Canada">
+    <meta itemprop="image" content="http://fsto.co/static/images/logo.png">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@fullstackto">
+    <meta name="twitter:title" content="{{ page.title }} | Full Stack Toronto">
+    <meta name="twitter:description" content="Full Stack Toronto is a non-profit that hosts seminars and conferences that focus on all layers of web development. #fstoconf15 is coming up Nov. 14-15, 2015 in Toronto, Canada">
+    <meta name="twitter:creator" content="@fullstackto">
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image:src" content="http://fsto.co/static/images/logo.png">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{{ page.title }} | Full Stack Toronto" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://fsto.co" />
+    <meta property="og:image" content="http://fsto.co/static/images/logo.png" />
+    <meta property="og:description" content="Full Stack Toronto is a non-profit that hosts seminars and conferences that focus on all layers of web development. #fstoconf15 is coming up Nov. 14-15, 2015 in Toronto, Canada" />
+    <meta property="og:site_name" content="Full Stack Toronto" />
+  </head>
   <body>
     <div id="mobile-nav">
       <nav>
