--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,7 +14,12 @@ body {
     box-shadow: 2px 0 5px #999;
   }
 }
-
+#logo {
+  width: 80px;
+  img {
+    width: 100%
+  }
+}
 #presented {
   width: 160px;
 
