--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,16 @@
 <html itemscope itemtype="http://schema.org/Article">
   <head>
     <title>{{ page.title }} | Full Stack Toronto</title>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width initial-scale=1"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<link rel="stylesheet" href="/static/css/main.css"/>
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}"/>
+<link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon"/>
+<link rel="icon" href="/static/images/favicon.ico" type="image/x-icon"/>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
     <meta name="description" content="Full Stack Toronto is a non-profit that hosts seminars and conferences that focus on all layers of web development. #fstoconf15 is coming up Nov. 14-15, 2015 in Toronto, Canada" />
 
     <!-- Schema.org markup for Google+ -->
