--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -112,8 +112,8 @@
         </div>
         <div class="clearfix"></div>
         <div id="partner">
-          <h2>Flight &amp; Hotel Partners</h2>
-          <p>Registrants of #fstoconf15 presented by TELUS enjoy discounts at the following flight and hotel providers. Details will be sent in your order confimration.</p>
+          <h2>Travel &amp; Hotel Partners</h2>
+          <p>Registrants of #fstoconf15 presented by TELUS enjoy discounts at the following travel and hotel providers. Details will be sent in your order confimration.</p>
           <ul class="sponsorList">
             <li class="sponsor">
               <a href="https://www.flyporter.com/Flight?culture=en-US"><img src="/static/images/sponsors/porter.jpg" alt="" /></a>
@@ -123,6 +123,9 @@
             </li>
             <li class="sponsor">
               <a href="http://www.viarail.ca/en"><img src="/static/images/sponsors/viarail.svg" alt="" /></a>
+            </li>
+            <li class="sponsor">
+              <a href="https://www.upexpress.com/"><img src="/static/images/sponsors/up-logo.jpg" alt="" /></a>
             </li>
             <li class="sponsor">
               <a href="http://www.ihg.com/holidayinn/hotels/us/en/reservation"><img src="/static/images/sponsors/holidayinn.jpg" alt="" /></a>
