--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h1>#fstoco</h1>
-					<h2>Canada's larges conference for web profesionals</h2>
+					<h2>A conference for... (cyle these)Web Developers, Web Designers, UX Designers, Project Managers, Product Owners, DevOps Engineers</h2>
 					<h3>Oct 17-18th, 2016</h3>
 					<h3>Toronto, Canada</h3>
 					<p><a class="btn btn-success btn-lg">Buy Tickets!</a></p>
