--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,11 @@
 		<h2>Sponsors</h2>
 	</div>
 </section>
+<section>
+	<div class="container">
+		<p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p> 
+	</div>
+</section>
 <footer>
 Board members photos
 Volunteers
