--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{{ page.title }} | Full Stack Toronto</title>
-
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css">
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
 
