--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,25 @@
 </section>
 <section>
 	<div class="container">
-		<p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p> 
+		<div class="row">
+			<div class="col-sm-12">
+				<p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="/static/fstoco-sponsorship.pdf">sponsorship deck</a></p>
+			</div> 
+		</div>
+		<div>
+			<div class="sponsor">
+				<p class="rank">Official Canadaian Airline</p>
+				<div class="sponsor-img">
+					<a href="http://www.aircanada.com/en/home.html" target="_blank"><img src="/static/images/sponsors/aircanada.svg" class="img-responsive" alt="Air Canada" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
+				<p class="rank">Travel Partner</p>
+				<div class="sponsor-img">
+					<a href="http://www.viarail.ca/en" target="_blank"><img src="/static/images/sponsors/viarail.svg" class="img-responsive" alt="ViaRail" /></a>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
 <footer>
