--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,9 @@ $green: #78bc4e;
 $blue: #3489c4;
 $theme-primary: #933a55;
 $theme-dark: #933a55;   
+* {
+  box-sizing: border-box;
+}
 html,
 body {
     height: 100%;
@@ -174,6 +177,33 @@ header.big {
   }
 }
 
+//Sponsors
+.sponsor {
+  border: 1px solid #ccc;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  position: relative;
+  float: left;
+  margin-left: -1px;
+  margin-top: -1px;
+  .rank{
+    font-size: 9px;
+    margin: 0;
+    position: absolute;
+    top: 5px;
+    width: 100%;
+  }
+  .sponsor-img{
+    width: 150px;
+    height: 150px;
+    margin: 0;
+    padding: 10px;
+    display: table-cell;
+    vertical-align: middle;
+  }
+}
+
 // Bootstrap Overrides
 .text-primary {
     color: $theme-primary;
@@ -232,4 +262,3 @@ img::-moz-selection {
 body {
     -webkit-tap-highlight-color: $theme-dark;
 }
-
