--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,9 @@
 	</div>
 </section>
 <footer>
-Board members photos
-Volunteers
-Sponsors
+<div class="container">
+    <div class="row col-md-12">
+      &copy; 2015 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/code-of-conduct">Code of Conduct</a> <a href="//www.iubenda.com/privacy-policy/759651" class="iubenda-nostyle no-brand iub-legal-only iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+    </div>
+  </div>
 </footer>
