--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
-					<h1>#fstoco</h1>
-					<h2>A conference focusing on all layers of the web and the people behind them!</h2>
+					<h1>#fstoco 2016</h1>
+					<h2>A conference focusing on all the layers of web<br /> and the people behind them!</h2>
 					<h3>Oct 17-18th, 2016</h3>
 					<h3>Toronto, Canada</h3>
 					<p><a class="btn btn-success btn-lg">Buy Tickets!</a></p>
