--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -172,6 +172,12 @@ header.big {
     text-align: center;
 }
 
+header {
+    height: 350px;
+    padding-top: 125px;
+    text-align: center;
+}
+
 // Sections
 
 .section-heading {
