--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
   {% include head.html %}
   <body>
   	{% include nav.html %}
-  	{% include header.html %}
+  	{% include big_header.html %}
     {{ content }}
     {% include footer.html %}
     {% include scripts.html %}
