--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -3,10 +3,10 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h1>#fstoco 2016</h1>
-					<h2>A conference focusing on all the layers of web<br /> and the people behind them!</h2>
+					<h2>A conference focusing on all the layers of web and the people behind them!</h2>
 					<h3>Oct 17-18th, 2016</h3>
 					<h3>Toronto, Canada</h3>
-					<p><a class="btn btn-success btn-lg">Buy Tickets!</a></p>
+					<h4><a class="btn btn-success btn-lg">Buy Tickets!</a></h4>
 				</div>
 			</div>
 		</div>
