--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,6 +10,8 @@
 <script src="/js/wow.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
+<script src="/js/classie.js"></script>
+<script src="/js/cbpAnimatedHeader.js"></script>
 <script src="/js/creative.js"></script>
 <script async>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
