--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -64,3 +64,29 @@
 {
 	font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
+
+// Fonts
+
+@font-face {
+    font-family: 'web_blenda';
+    src: url('/fonts/blenda_script-webfont.eot');
+    src: url('/fonts/blenda_script-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/blenda_script-webfont.woff2') format('woff2'),
+         url('/fonts/blenda_script-webfont.woff') format('woff'),
+         url('/fonts/blenda_script-webfont.ttf') format('truetype'),
+         url('/fonts/blenda_script-webfont.svg#blenda_scriptregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'web_homestead';
+    src: url('/fonts/homestead-inline-webfont.eot');
+    src: url('/fonts/homestead-inline-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/homestead-inline-webfont.woff2') format('woff2'),
+         url('/fonts/homestead-inline-webfont.woff') format('woff'),
+         url('/fonts/homestead-inline-webfont.ttf') format('truetype'),
+         url('/fonts/homestead-inline-webfont.svg#homestead_inlineinline') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
