Tweak home design + Sponsor (temp) logo in nav bar fro shrinking test
Links styling changed to bold with no underline until hover.
H2 changed to blenda.
Whitespace adjusted further.

--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -3,7 +3,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h1>#fstoco 2016</h1>
-					<h2>A conference focusing on all the layers of web and the people behind them!</h2>
+					<h2>The conference that covers all the layers of the Web and the people who weave it!</h2>
 					<h3>Oct 17-18th, 2016</h3>
 					<h3>Toronto, Canada</h3>
 					<h4><a class="btn btn-success btn-lg">Buy Tickets!</a></h4>
