--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,10 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="/"><img src="/static/images/fsto-logo.png" alt="Full Stack Toronto" /></a>
+            <div id="presented">
+				<div id="telus"><a href="http://www.telus.com/"><img src="/static/images/Telus.jpg" alt="TELUS"></a>
+				</div>
+			</div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
