--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -60,6 +60,12 @@
 	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
+@mixin blenda()
+{
+	font-family: "web_blenda","Palatino Linotype","Book Antiqua",Palatino,serif;
+}
+
+
 @mixin serif-font()
 {
 	font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
